Refactor: Implementación de los servicios en controladores